add desc projetos automacao

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 
     <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
 
-    <link rel="icon" type="imagem/png" href="../src/imgs/aviaoAureaVertical.png" />
+    <link rel="icon" type="imagem/png" href="logoAurea.png" />
     <title>Aurea</title>
   </head>
   <body>
