--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,8 @@
 
     <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
 
-    <script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-app.js"></script>
+    <!-- <script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-analytics.js"></script> -->
 
     <link rel="icon" type="imagem/png" href="logoAurea.png" />
     <title>Aurea</title>
